AS#152122905738626, Files upload: dragging/dropping incorrect file leads to overlap with help text -- Fixed

--- a/assets/css/directives/tc-fp-file-input.directive.scss
+++ b/assets/css/directives/tc-fp-file-input.directive.scss
@@ -18,17 +18,6 @@ tc-fp-file-input {
     width: 240px;
   }
 
-  .tc-file-field__input::after {
-    content: 'or';
-    font-size: 12px;
-    line-height: 15px;
-    color: $tc-gray-30;
-    bottom: 85px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%)
-  }
-
   .tc-btn {
     margin-bottom: 5px;
     position: absolute;
